samples/_failures_safe/1761420875_b6fe78_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8af8daf3.c: In function ‘process_input’:
./samples/SAFE/__tmp_8af8daf3.c:165:28: error: missing terminating " character
  165 |                     printf("
      |                            ^
./samples/SAFE/__tmp_8af8daf3.c:165:21: error: expected expression at end of input
  165 |                     printf("
      |                     ^~~~~~
./samples/SAFE/__tmp_8af8daf3.c:165:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8af8daf3.c:165:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8af8daf3.c:165:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8af8daf3.c:165:21: error: expected declaration or statement at end of input
